# multiplayer-space-ai

./: 2105-nopathfinding.json  Cargo.toml  PROTOCOL.md  README.md  design.md
ai-pathfinding/: Cargo.toml
ai-pathfinding/src/: lib.rs
ai-template/: Cargo.toml  README.md
ai-template/src/: lib.rs
bot-client/: Cargo.toml
bot-client/src/: main.rs
client/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx
client/src/engine/: renderer.ts  wt-client.ts
client/src/game/: state.ts
client/src/types/: index.ts
fair-bot/: Cargo.toml
fair-bot/src/: main.rs
src/: main.rs  room.rs  room_manager.rs  spatial.rs
src/components/: mod.rs
src/network/: messages.rs  mod.rs  protocol.rs  server.rs
src/systems/: ai.rs  collision.rs  mod.rs  movement.rs  obstacles.rs  shooting.rs  spawning.rs
src/wasm_ai/: interface.rs  mod.rs  runner.rs
